Extrude Mesh node crashes when vertex group is present #117553

Closed
opened 2024-01-26 18:14:51 +01:00 by Massimo · 1 comment

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.33

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-26 02:43, hash: da77f90744c1
Worked: 4.0.3

Short description of error
As soon as an Extrude Mesh node is placed and connected, on a mesh with a vertex group, blender crashes without warnings

Exact steps for others to reproduce the error
Select the default cube, create a new vertex group, add a geometry nodes modifier, place an Extrude Mesh node and connect it.

Attached is a stripped down file where I first encountered the issue, it was saved in 4.0.3 with the Extrude node already in place, so it crashes at startup when opened with 4.1. Deleting the vertex group prevents the crash.
It was broken before i upgraded to the latest daily build, i believe the previous version i had was the daily 4.1 build from 18/01/24

this may be useful:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000000000207e09d in blender::nodes::node_geo_extrude_mesh_cc::gather_attributes(blender::bke::MutableAttributeAccessor, blender::Span<blender::bke::AttributeIDRef>, blender::Span<int>, blender::IndexRange) ()
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.33 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-26 02:43, hash: `da77f90744c1` Worked: 4.0.3 **Short description of error** As soon as an Extrude Mesh node is placed and connected, on a mesh with a vertex group, blender crashes without warnings **Exact steps for others to reproduce the error** Select the default cube, create a new vertex group, add a geometry nodes modifier, place an Extrude Mesh node and connect it. Attached is a stripped down file where I first encountered the issue, it was saved in 4.0.3 with the Extrude node already in place, so it crashes at startup when opened with 4.1. Deleting the vertex group prevents the crash. It was broken before i upgraded to the latest daily build, i believe the previous version i had was the daily 4.1 build from 18/01/24 this may be useful: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000000000207e09d in blender::nodes::node_geo_extrude_mesh_cc::gather_attributes(blender::bke::MutableAttributeAccessor, blender::Span<blender::bke::AttributeIDRef>, blender::Span<int>, blender::IndexRange) () ```
Massimo added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-01-26 18:14:51 +01:00
Massimo changed title from Extrude mesh node crashes when a vertex group is present to Extrude Mesh node crashes when vertex group is present 2024-01-26 21:06:06 +01:00

Thank you for the report.

I can confirm the issue and have traced its cause to the commit: c31718649d
@HooglyBoogly ^

Thank you for the report. I can confirm the issue and have traced its cause to the commit: c31718649d @HooglyBoogly ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-30 04:16:02 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-01-30 04:19:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117553
No description provided.